# icfp2021

./: .gitignore  Cargo.toml  LICENSE  README  display_solution.py  pyproject.toml  scores.json  setup.py
aray/: README.md  README.rst  pyproject.toml  setup.py
bricklayer/: Cargo.toml
bricklayer/src/: main.rs  solver.rs  util.rs  vaniver.rs
candidates/: 1-10448-cpsolver.json  10-10129-cpsolver.json  100-199411-cpsolver.json  101-76987-cpsolver.json  102-456949-cpsolver.json  103-304484-cpsolver.json  104-69058-cpsolver.json  107-77402-cpsolver.json  108-126397-cpsolver.json  109-9708-cpsolver.json  110-144875-cpsolver.json  111-439195-cpsolver.json  112-100282-cpsolver.json  113-47374-cpsolver.json  115-392888-cpsolver.json  116-227841-cpsolver.json  117-156623-cpsolver.json  118-189162-cpsolver.json  119-190571-cpsolver.json  120-64140-cpsolver.json  121-146298-cpsolver.json  123-75661-cpsolver.json  124-99197-cpsolver.json  126-474594-cpsolver.json  127-45892-cpsolver.json  128-109944-cpsolver.json  129-246039-cpsolver.json  13-571-cpsolver.json  130-61545-cpsolver.json  131-169829-cpsolver.json  132-182659-cpsolver.json  15-325-cpsolver.json  16-557-cpsolver.json  16.solution  17-1763-cpsolver.json  17.solution  2-13269-cpsolver.json  20-3023-cpsolver.json  20.solution  21-75-cpsolver.json  (+107 more)
cc_gang/: Makefile  curltest.cc  dep.sh  forbidden.cc  steez  steez.cc
clipper-sys/: Cargo.toml  build.rs
constraints/: linear.py
forbidden/: 14-forbidden.json  18-forbidden.json  19-forbidden.json  27-forbidden.json  28-forbidden.json  29-forbidden.json  (+8 more)
golf/: golf.py  (+6 more)
(+291 files in other folders)
