[package]
name = "bricklayer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
log = "0.4"
geo = "0.18.0"
# geo-offset = "0.3.0"
# geo-clipper = "0.6.0"
judge = { path = "../judge" }
